--- a/src/components/Shopping/Shopping.css
+++ b/src/components/Shopping/Shopping.css
@@ -1,6 +1,7 @@
 .shopping-outerContainer {
   padding: 0 1rem;
-  height: 100%;
+  padding-bottom: 2rem;
+  min-height: 100%;
   background: var(--clr-1-dark);
 }
 .shopping-outerContainer > h1 {
